--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-drawer-side a.active {
+.drawer-side a.active {
     color: white;
 }
-drawer-side a {
+
+.drawer-side a {
     background-color: transparent;
 }
